--- a/GitFile.html
+++ b/GitFile.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="lec-1/index.html">lec-1</a> <br> <br>
-    <a href="lec-2(Grid)/index.html">Grid</a>
+    <a href="/lec-1/index.html">lec-1</a> <br> <br>
+    <a href="/lec-2(Grid)/index.html">Grid</a>
 </body>
 </html>
