--- a/lec-2(Grid)/index.html
+++ b/lec-2(Grid)/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,30 @@
     <title>Document</title>
     <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
+
 <body>
-    <div class="row border border-danger">
-       <div class="col-fulid-6 col-md-2 border border-warning">
-           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit quae deleniti eaque consequatur alias repudiandae illum saepe repellendus rem repellat non totam ab labore, officiis tempora praesentium ducimus nulla est.
-       </div>
-       <div class="col-fulid-6 border border-warning">
-           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit quae deleniti eaque consequatur alias repudiandae illum saepe repellendus rem repellat non totam ab labore, officiis tempora praesentium ducimus nulla est.
-       </div>
-       <div class="col-fulid-6 border border-warning">
-           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit quae deleniti eaque consequatur alias repudiandae illum saepe repellendus rem repellat non totam ab labore, officiis tempora praesentium ducimus nulla est.
-       </div>
+    <div class="row border border-danger bg-warning container-fluid">
+        <div class="row justify-content-between">
+            <div class="col-7 border border-danger bg-light">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, voluptatum! Soluta facere quibusdam
+                voluptatem dicta provident, pariatur reiciendis modi cum quasi alias assumenda sunt mollitia. Odit
+                aspernatur sequi earum tenetur.
+            </div>
+            <div class="col-4 border border-dark bg-dark  text-info">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, ipsa rem. Soluta delectus autem,
+                aliquid voluptas sit fugiat non accusantium odio voluptates odit? Nemo, cupiditate quam necessitatibus
+                nam fugiat dignissimos?
+            </div>
+        </div>
+    </div>
+
+    <div class="row border border-dark"> 
+        <div class="col-2 border border-info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptatem dolorem eligendi modi deserunt repudiandae aspernatur accusantium aut atque maiores, expedita, fugiat quibusdam ad esse vitae veritatis ullam nihil pariatur!
+        </div>
     </div>
 
 </body>
 <script src="/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+
 </html>
