--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/lec-1/index.html">lec-1</a>
-    <a href="/lec-2(Grid)/index.html">lec-2</a>
+    <a href="lec-1/index.html">lec-1</a>
+    <a href="lec-2(Grid)/index.html">lec-2</a>
 </body>
 </html>
