--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
 <body>
-    <a href="lec-1/index.html">lec-1</a>
-    <a href="lec-2(Grid)/index.html">lec-2</a>
+    <a href="./lec-1/index.html">lec-1</a>
+    <a href="./lec-2(Grid)/index.html">lec-2</a>
 </body>
+<script src="/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
 </html>
