--- a/lec-2(Grid)/index.html
+++ b/lec-2(Grid)/index.html
@@ -10,24 +10,46 @@
 </head>
 
 <body>
-    <div class="row border border-danger bg-warning container-fluid">
-        <div class="row justify-content-between">
-            <div class="col-7 border border-danger bg-light">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, voluptatum! Soluta facere quibusdam
-                voluptatem dicta provident, pariatur reiciendis modi cum quasi alias assumenda sunt mollitia. Odit
-                aspernatur sequi earum tenetur.
+    <div class="row border border-danger">
+        <div class="row justify-content-between ">
+            <div class="col-7 border border-danger bg-light col-xxl-6 col-xl-7 col-md-4">
+                <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active ">
+                        <img src="https://i.pinimg.com/236x/bc/fd/34/bcfd340688665f2213a6b075e43f0284.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+
             </div>
-            <div class="col-4 border border-dark bg-dark  text-info">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, ipsa rem. Soluta delectus autem,
-                aliquid voluptas sit fugiat non accusantium odio voluptates odit? Nemo, cupiditate quam necessitatibus
-                nam fugiat dignissimos?
+            <div class="col-4 border border-dark   text-info col-xxl-4 col-xl-7 col-md-4  " >
+                <div class="card" style="width: 18rem;">
+                    <img src="https://i.pinimg.com/236x/b0/37/d7/b037d77d91ba8c2e9ed5f87da9d04cbf.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
             </div>
         </div>
     </div>
 
     <div class="row border border-dark"> 
-        <div class="col-2 border border-info">
+        <div class="col-4 row-6 border border-info">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, voluptatem dolorem eligendi modi deserunt repudiandae aspernatur accusantium aut atque maiores, expedita, fugiat quibusdam ad esse vitae veritatis ullam nihil pariatur!
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt nihil, earum dolorem exercitationem, fugit perferendis ipsa repellat natus, corrupti minima cum facilis quis provident quidem. Laudantium eaque earum optio rem.
+        </div>
+        <div class="col-3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis fuga modi voluptates omnis, repellat quasi, rerum est, numquam corporis suscipit incidunt minima vitae veritatis ratione! Animi hic laboriosam sint rem.
         </div>
     </div>
 
