--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <a href="lec-1/index.html">lec-1</a> <br> <br>
     <a href="lec-2(Grid)/index.html">Grid</a>
+    <a href="lec-3/Index.html">lec-3</a>
 </body>
 </html>
